Resized task edit inputs. Edit task name from header implemented. Fixed text overflows.

--- a/src/app/admin/admin-dashboard/admin-task-view/admin-task-view.component.css
+++ b/src/app/admin/admin-dashboard/admin-task-view/admin-task-view.component.css
@@ -17,15 +17,11 @@
   animation-fill-mode: forwards;
 }
 
-.wrapper div {
-  flex: 1;
-}
-
 .top-column {
   font-size: 125%;
   font-weight: bolder;
-  padding-left: 20px;
-  padding-top: 10px;
+  padding-left: 2rem;
+  padding-top: 1.15rem;
   height: 30%;
 }
 
@@ -47,7 +43,6 @@
   flex-direction: column;
   padding-left: 5px;
   padding-right: 5px;
-  border: 1px dashed black;
 }
 
 .middle-column span {
